Atualizando as views para remoção de chamadas CSS sem estilo.

--- a/app/views/clientes/_cliente.html.erb
+++ b/app/views/clientes/_cliente.html.erb
@@ -1,21 +1,21 @@
-<div id="<%= dom_id cliente %>" class='showing'>
+<div id="<%= dom_id cliente %>">
 
-  <p class='show-item'>
+  <p>
     <strong>Nome:</strong>
     <%= cliente.nome %>
   </p>
 
-  <p class='show-item'>
+  <p>
     <strong>CPF:</strong>
     <%= cliente.cpf %>
   </p>
 
-  <p class='show-item'>
+  <p>
     <strong>Email:</strong>
     <%= cliente.email %>
   </p>
 
-  <p class='show-item'>
+  <p>
     <strong>Telefone:</strong>
     <%= cliente.telefone %>
   </p>
