--- a/app/views/clientes/_form.html.erb
+++ b/app/views/clientes/_form.html.erb
@@ -14,28 +14,28 @@
     <% end %>
   </div>
 
-  <div class='form-div'>
-    <div class='labels'>
+  <div>
+    <div>
       <%= form.label :cpf, style: "display: block" %>
       <%= form.text_field :cpf %>
     </div>
 
-    <div class='labels'>
+    <div>
       <%= form.label :nome, style: "display: block" %>
       <%= form.text_field :nome %>
     </div>
 
-    <div class='labels'>
+    <div>
       <%= form.label :email, style: "display: block" %>
       <%= form.text_field :email %>
     </div>
 
-    <div class='labels'>
+    <div>
       <%= form.label :telefone, style: "display: block" %>
       <%= form.text_field :telefone %>
     </div>
 
-    <div class='submit'>
+    <div>
       <% if cliente.persisted? %>
         <%= form.submit "Atualizar Cliente" %>
       <% else %>
