--- a/app/views/quartos/_quarto.html.erb
+++ b/app/views/quartos/_quarto.html.erb
@@ -1,30 +1,30 @@
-<div id="<%= dom_id quarto %>" class='showing'>
-  <p class='show-item'>
+<div id="<%= dom_id quarto %>">
+  <p>
     <strong>Numero:</strong>
     <%= quarto.numero %>
   </p>
 
-  <p class='show-item'>
+  <p>
     <strong>Tipo:</strong>
     <%= quarto.tipo %>
   </p>
 
-  <p class='show-item'>
+  <p>
     <strong>Disponibilidade para Locação:</strong>
     <%= quarto.disponibilidade ? "Disponível" : "Indisponível" %>
   </p>
 
-  <p class='show-item'>
+  <p>
     <strong>Preco da Diária (R$):</strong>
     <%= quarto.preco_diaria %>
   </p>
 
-  <p class='show-item'>
+  <p>
     <strong>Descrição Adicional:</strong>
     <%= quarto.descricao %>
   </p>
 
-  <p class='show-item'>
+  <p>
     <strong>Quantidade de Hóspedes:</strong>
     <%= quarto.quantidade_de_hospedes %>
   </p>
