--- a/app/views/quartos/edit.html.erb
+++ b/app/views/quartos/edit.html.erb
@@ -4,7 +4,7 @@
 
 <br>
 
-<div class='link-to-div'>
+<div>
   <%= link_to "Exibir quarto", @quarto %>
   <%= link_to "Retornar aos quartos", quartos_path %>
 </div>
