--- a/app/views/clientes/edit.html.erb
+++ b/app/views/clientes/edit.html.erb
@@ -4,7 +4,7 @@
 
 <br>
 
-<div class='link-to-div'>
+<div>
   <%= link_to "Exibir cliente", @cliente %>
   <%= link_to "Retornar aos clientes", clientes_path %>
 </div>
