--- a/app/views/reservas/new.html.erb
+++ b/app/views/reservas/new.html.erb
@@ -4,7 +4,7 @@
 
 <br>
 
-<div class='link-to-div'>
+<div>
   <%= link_to "Retornar às reservas", reservas_path %>
   <%= link_to "Home", root_path %>
 </div>
