--- a/app/views/quartos/show.html.erb
+++ b/app/views/quartos/show.html.erb
@@ -45,6 +45,6 @@
 <br>
 
 <div class='link-show'>
-  <%= link_to "Editar quarto", edit_quarto_path(@quarto) %>
+  <%= link_to "Editar quarto", edit_quarto_path(@quarto) %> <br>
   <%= button_to "Remover quarto", @quarto, method: :delete %>
 </div>
