Atualizando as views */show.html.erb e */index.html.erb com um novo botão capaz de marcar as reservas diretamente da listagem de "clientes/quartos".

--- a/app/views/clientes/show.html.erb
+++ b/app/views/clientes/show.html.erb
@@ -29,6 +29,6 @@
 
 <div>
   <%= link_to "Editar cliente", edit_cliente_path(@cliente) %> <br>
-  <%= link_to "Agendar Reserva", new_reserva_path(cliente_id: @cliente) %> <br>
+  <%= link_to "Marcar Reserva", new_reserva_path(cliente_id: @cliente) %> <br>
   <%= button_to "Remover cliente", @cliente, method: :delete %>
 </div>
