--- a/app/views/clientes/index.html.erb
+++ b/app/views/clientes/index.html.erb
@@ -14,8 +14,10 @@
   <% if @clientes.present? %>
     <tr class='tr-show'>
       <% @clientes.each do |cliente| %>
-        <p class='show-grid'> [ <%= cliente.nome %> ]
-          <br> <%= link_to "Exibir cliente", cliente %> <br>
+        <p class='show-grid'> [ <%= cliente.nome %> ] <br>
+          <%= link_to "Exibir cliente", cliente %> <br>
+          <%= link_to "Marcar Reserva", new_reserva_path(cliente_id: cliente) %>
+        </p>
       <% end %>
     </tr>
   <% else %>
