--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -177,4 +177,52 @@ footer {
 }
 
 /* End of Index pages */
+
+.overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+    z-index: 999;
+}
+.popup-container {
+    width: 80%;
+    margin-top: 2%;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: auto;
+
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    background-color: white;
+    padding: 20px;
+    border: 1px solid #ccc;
+    z-index: 1000;
+    overflow-y: auto;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+}
+
+.client-option {
+    background-color: rgb(1 73 95);
+    color: white;
+    margin: 1px;
+    padding: 10px;
+    border-radius: 10px;
+    text-align: center;
+}
+
+.room-option {
+    background-color: rgb(1 73 95);
+    color: white;
+    margin: 1px;
+    padding: 10px;
+    border-radius: 10px;
+    text-align: center;
+}
 /* ESTILO DO CONTEÚDO - FIM */
