--- a/app/views/quartos/index.html.erb
+++ b/app/views/quartos/index.html.erb
@@ -16,9 +16,7 @@
       <% @quartos.each do |quarto| %>
         <p class='show-grid'> [ Quarto <%= quarto.numero %> -
           Status: <%= quarto.disponibilidade ? "Disponível" : "Indisponível" %> ] <br>
-          <%= quarto.tipo %> | Quantidade de hospedes: <%= quarto.quantidade_de_hospedes %> <br>
-          Preço da Diária: R$<%= quarto.preco_diaria %> <br>
-          Descrição: <%= quarto.descricao %> <br>
+          <%= quarto.tipo %> | Preço da Diária: R$<%= quarto.preco_diaria %> <br>
           <%= link_to "Exibir quarto", quarto %> <br>
           <%= link_to "Marcar Reserva", new_reserva_path(quarto_id: quarto) %>
         </p>
