Atualizando testes com o Cliente.

--- a/app/views/clientes/index.html.erb
+++ b/app/views/clientes/index.html.erb
@@ -14,7 +14,11 @@
   <% if @clientes.present? %>
     <tr class='tr-show'>
       <% @clientes.each do |cliente| %>
-        <p class='show-grid'> [ <%= cliente.nome %> ] <br>
+        <p class='show-grid'>
+          [ Cliente <%= cliente.id %> ] <br>
+          Nome:  <%= cliente.nome %>  <br>
+          CPF:  <%= cliente.cpf %>  <br>
+          Email:  <%= cliente.email %>  <br>
           <%= link_to "Exibir cliente", cliente %> <br>
           <%= link_to "Marcar Reserva", new_reserva_path(cliente_id: cliente) %>
         </p>
