--- a/app/views/quartos/index.html.erb
+++ b/app/views/quartos/index.html.erb
@@ -16,8 +16,16 @@
       <% @quartos.each do |quarto| %>
         <p class='show-grid'> [ Quarto <%= quarto.numero %> -
           Status: <%= quarto.disponibilidade ? "Disponível" : "Indisponível" %> ] <br>
-          <%= quarto.tipo %> | Preço da Diária: R$<%= quarto.preco_diaria %> <br>
-          <%= link_to "Exibir quarto", quarto %> <br>
+          Preço da Diária: R$<%= sprintf('%.2f', quarto.preco_diaria) %> <br>
+          Tipo: <%= quarto.tipo %> <br>
+          Suporta <%= quarto.quantidade_de_hospedes.to_i %> hóspede(s) <br>
+          Descrição:
+          <% if quarto.descricao == "" %>
+            nenhuma descrição fornecida. <br>
+          <% else %>
+            <%= quarto.descricao %> <br>
+          <% end %>
+        <%= link_to "Exibir quarto", quarto %> <br>
           <%= link_to "Marcar Reserva", new_reserva_path(quarto_id: quarto) %>
         </p>
       <% end %>
